// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubTitle component matches snapshot with a label prop 1`] = `
<div>
  <span
    class="MuiTypography-root makeStyles-label-1 MuiTypography-overline MuiTypography-gutterBottom"
    data-testid="subtitle-label"
  >
    Partner: 
  </span>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    data-testid="subtitle-content"
  >
    Partner1
  </h6>
</div>
`;

exports[`SubTitle component matches snapshot without a label prop 1`] = `
<div>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    data-testid="subtitle-content"
  >
    Partner1
  </h6>
</div>
`;
